--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,10 @@
 .todoBlock {
   padding: 30px;
   margin-top: 50px;
+  margin: 0 auto;
   background: #fff;
   border-radius: 10px;
   box-shadow: -9px 17px 13px rgb(0 0 0 / 16%);
+  width: 700px;
 }
+
